# bark

./: .bark.toml  .gitignore  Cargo.toml  README.md  install.sh  tarpaulin-report.html  tree.txt
.github/workflows/: ci.yml  release.yml
src/: backup.rs  cli.rs  config.rs  default_config.toml  detect.rs  header.rs  lib.rs  main.rs  processor.rs  template.rs  tree.rs  walker.rs  watcher.rs
tests/: integration.rs
