# File: Cargo.toml
[package]
name = "bark"
version = "0.0.2"
edition = "2021"
description = "Smart file header management and directory tree generator"
license = "MIT"
authors = ["lordofthemind"]
repository = "https://github.com/lordofthemind/bark"
homepage = "https://github.com/lordofthemind/bark"
documentation = "https://github.com/lordofthemind/bark#readme"
keywords = ["cli", "header", "tree", "tagger", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "bark"
path = "src/main.rs"

[dependencies]
clap             = { version = "4.5", features = ["derive", "env"] }
ignore           = "0.4"
notify           = "6.1"
rayon            = "1.10"
toml             = "0.8"
serde            = { version = "1.0", features = ["derive"] }
anyhow           = "1.0"
colored          = "2.1"
tempfile         = "3.10"
chrono           = "0.4"
content_inspector = "0.2"
regex            = "1.10"
glob             = "0.3"

[dev-dependencies]
assert_cmd  = "2.0"
predicates  = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
